Added api output response size query paramater